--- a/assets/templates/Forum Skeleton/Post.cshtml
+++ b/assets/templates/Forum Skeleton/Post.cshtml
@@ -1,43 +1,308 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>{Forum Name} - {Post Name}</title>
-		<meta name="description" content="">
-		<meta name="author" content="">
+<head>
+	<meta charset="utf-8">
+	<title>{Forum Name} - {Post Name}</title>
+	<meta name="description" content="">
+	<meta name="author" content="">
+	@RenderPage("~/partials/shared/Styles.cshtml")
+	@RenderPage("~/partials/shared/Scripts.cshtml")
+</head>
+<body>
+	@RenderPage("~/partials/TopBar.cshtml")
 
-		@RenderPage("~/partials/shared/Styles.cshtml")
-		@RenderPage("~/partials/shared/Scripts.cshtml")
+	<div class="container-fluid">
+		@RenderPage("~/partials/Sidebar.cshtml")
 
-	</head>
+		<div class="content">
+			<ul class="breadcrumb">
+				<li><a href="AllPosts.cshtml">All Posts</a> <span class="divider">/</span></li>
+				<li><a href="Category.cshtml">{Category}</a> <span class="divider">/</span></li>
+				<li class="active">{Post Name}</li>
+			</ul>
+			<h1>{Post Name}</h1>
+			<hr />
 
-	<body>
+			<div class="row">
 
-		@RenderPage("~/partials/TopBar.cshtml")
+				<div class="span1" style="margin-left: 35px; margin-right: 0px;">
+					<img src="images/thumb-up.png" /><br />
+					<img src="images/thumb-down.png" /><br />
+					<img src="images/icon_notification_attention.png" /><br />
+				</div>
 
-		<div class="container-fluid">
-        
-			@RenderPage("~/partials/Sidebar.cshtml")
-        
-			<div class="content">
-        
-				<h1>{Post Name}</h1>
-        
-				<ul class="breadcrumb">
-					<li><a href="AllPosts.cshtml">All Posts</a> <span class="divider">/</span></li>
-					<li><a href="Category.cshtml">{Category}</a> <span class="divider">/</span></li>
-					<li class="active">{Post Name}</li>
-				</ul>
-        
-				<hr />
-        
-				<p><small>(Post info goes here.)</small></p>
-            
-				<footer>
-					<p>&copy; Newco 2011-12</p>
-				</footer>
+				<div class="span12" style="margin-left: 0px; margin-right: 0px;">
+					<p>This is the body of the post. Morbi tortor ligula, tempor vitae adipiscing scelerisque,
+						venenatis quis nulla. Class aptent taciti sociosqu ad litora torquent per conubia
+						nostra, per inceptos himenaeos. Duis ac augue urna, fermentum convallis enim. Nulla
+						rutrum placerat eros sit amet dictum. Fusce dolor massa, bibendum posuere elementum
+						ac, consectetur vitae lorem. Fusce nec justo quis ante pellentesque gravida. Etiam
+						a diam quam. Nunc tellus mi, commodo molestie sollicitudin sed, facilisis dictum
+						magna. Pellentesque eros nisl, congue quis consectetur a, tempor rutrum diam. In
+						quam velit, rutrum at tincidunt ut, bibendum commodo elit. In neque velit, fringilla
+						suscipit sollicitudin at, interdum vel est. Nunc sed ipsum nisl.</p>
+					<hr />
+
+					<div class="row">
+
+						<div class="span6">
+							<h2>Comments</h2>
+						</div>
+
+						<div class="span6">
+							<ul class="pills"  style="float: right;">
+								<li class="active"><a href="Post.cshtml">Best</a></li>
+								<li><a href="Post.cshtml">Oldest</a></li>
+								<li><a href="Post.cshtml">Newest</a></li>
+							</ul>
+						</div>
+
+					</div>
+					<hr style="margin-top: 0px;" />
+
+					<div class="row">
+
+						<div class="span3">
+
+							<div class="row">
+
+								<div class="span1" style="margin-top: 4px;">
+									<a href="User.cshtml">
+										<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
+								</div>
+
+								<div class="span2" style="margin-left: 0px;">
+									<a href="User.cshtml">Username</a><br />
+									<small style="font-size: smaller;">About an hour ago</small>
+								</div>
+
+							</div>
+
+						</div>
+
+						<div class="span9">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
+								amet volutpat.</p>
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="span3">
+
+							<div class="row">
+
+								<div class="span1" style="margin-top: 4px;">
+									<a href="User.cshtml">
+										<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
+								</div>
+
+								<div class="span2" style="margin-left: 0px;">
+									<a href="User.cshtml">Username</a><br />
+									<small style="font-size: smaller;">About an hour ago</small>
+								</div>
+
+							</div>
+
+						</div>
+
+						<div class="span9">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
+								amet volutpat.</p>
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="span3">
+
+							<div class="row">
+
+								<div class="span1" style="margin-top: 4px;">
+									<a href="User.cshtml">
+										<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
+								</div>
+
+								<div class="span2" style="margin-left: 0px;">
+									<a href="User.cshtml">Username</a><br />
+									<small style="font-size: smaller;">About an hour ago</small>
+								</div>
+
+							</div>
+
+						</div>
+
+						<div class="span9">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
+								amet volutpat.</p>
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="span3">
+
+							<div class="row">
+
+								<div class="span1" style="margin-top: 4px;">
+									<a href="User.cshtml">
+										<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
+								</div>
+
+								<div class="span2" style="margin-left: 0px;">
+									<a href="User.cshtml">Username</a><br />
+									<small style="font-size: smaller;">About an hour ago</small>
+								</div>
+
+							</div>
+
+						</div>
+
+						<div class="span9">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
+								amet volutpat.</p>
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="span3">
+
+							<div class="row">
+
+								<div class="span1" style="margin-top: 4px;">
+									<a href="User.cshtml">
+										<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
+								</div>
+
+								<div class="span2" style="margin-left: 0px;">
+									<a href="User.cshtml">Username</a><br />
+									<small style="font-size: smaller;">About an hour ago</small>
+								</div>
+
+							</div>
+
+						</div>
+
+						<div class="span9">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
+								amet volutpat.</p>
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="span3">
+
+							<div class="row">
+
+								<div class="span1" style="margin-top: 4px;">
+									<a href="User.cshtml">
+										<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
+								</div>
+
+								<div class="span2" style="margin-left: 0px;">
+									<a href="User.cshtml">Username</a><br />
+									<small style="font-size: smaller;">About an hour ago</small>
+								</div>
+
+							</div>
+
+						</div>
+
+						<div class="span9">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
+								amet volutpat.</p>
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="span3">
+
+							<div class="row">
+
+								<div class="span1" style="margin-top: 4px;">
+									<a href="User.cshtml">
+										<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
+								</div>
+
+								<div class="span2" style="margin-left: 0px;">
+									<a href="User.cshtml">Username</a><br />
+									<small style="font-size: smaller;">About an hour ago</small>
+								</div>
+
+							</div>
+
+						</div>
+
+						<div class="span9">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
+								amet volutpat.</p>
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="span3">
+
+							<div class="row">
+
+								<div class="span1" style="margin-top: 4px;">
+									<a href="User.cshtml">
+										<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
+								</div>
+
+								<div class="span2" style="margin-left: 0px;">
+									<a href="User.cshtml">Username</a><br />
+									<small style="font-size: smaller;">About an hour ago</small>
+								</div>
+
+							</div>
+
+						</div>
+
+						<div class="span9">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
+								amet volutpat.</p>
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="span9 offset3">
+							<hr />
+							<a class="btn primary" href="Post.cshtml">Reply</a>
+						</div>
+
+					</div>
+
+				</div>
+
 			</div>
+
+			<footer>
+				<p>&copy; Newco 2011-12</p>
+			</footer>
 		</div>
 
-	</body>
+	</div>
+
+</body>
 </html>
