--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/Detail.cshtml
@@ -15,11 +15,11 @@
 <div class="row">
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 </div>
@@ -29,11 +29,11 @@
 <div class="row">
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 </div>
@@ -43,19 +43,19 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 </div>
