--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Popular.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Popular.cshtml
@@ -27,11 +27,11 @@
 <div class="row">
 
 	<div class="span10">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "XLarge" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "XLarge" })
 	</div>
 
 	<div class="span6">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 </div>
@@ -41,11 +41,11 @@
 <div class="row">
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Medium" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium" })
 	</div>
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Medium" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium" })
 	</div>
 
 </div>
@@ -55,19 +55,19 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 </div>
